--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -59,14 +59,39 @@
                                 <input type="text" name="nat"ng-model="vm.formWizard.nat">
                             </md-input-container>
 
-                            <md-input-container flex="100" flex-gt-xs="10">
-                                <label>Estado</label>
-                                <md-select ng-model="vm.formWizard.estado">
-                                    <md-option ng-repeat="estado in vm.estado" value="{{estado}}">
-                                        {{estado}}
-                                    </md-option>
-                                </md-select>
-                            </md-input-container>
+                       <div class="form-group">
+                        <label for="">Estado</label>
+                        <select ng-model="vm.formWizard.estado">
+                            <option></option>
+			    <option>AC</option>	
+                            <option>AL</option>
+		 	    <option>AP</option>
+			    <option>AM</option>	
+		       	    <option>BA</option>
+			    <option>CE</option>
+			    <option>DF</option>
+                            <option>ES</option>
+                            <option>GO</option>
+                            <option>MA</option>
+			    <option>MT</option>
+                            <option>MS</option>
+                            <option>MG</option>
+                            <option>PA</option>
+                            <option>PB</option>
+                            <option>PR</option>
+                            <option>PE</option>
+                            <option>PI</option>
+                            <option>RJ</option>
+                            <option>RN</option>
+                            <option>RS</option>
+                            <option>RO</option>
+                            <option>RR</option>
+                            <option>SC</option>
+                            <option>SP</option>
+                            <option>SE</option>
+                            <option>TO</option>				
+                        </select>
+                    </div>
 
                             <md-input-container flex="100" flex-gt-xs="15">
                                 <label>Assistido?</label>
@@ -336,10 +361,6 @@
                     </form>
                 </md-tab-body>
             </md-tab>
-        </md-tabs>
-
-
-
 
 
 <!-- PASSO 5 / STEP 5-->
@@ -356,14 +377,18 @@
                 </md-tab-label>
                 <md-tab-body>
                     <form name="wizardStep5" ms-form-wizard-form novalidate>
-                     <md-input-container flex="100" flex-gt-xs="10">
-                                <label>Estado civil dos pais</label>
-                                <md-select ng-model="vm.formWizard.estadocivilpais">
-                                    <md-option ng-repeat="estado in vm.estadocivilpais" value="{{estadocivilpais}}">
-                                        {{estadocivilpais}}
-                                    </md-option>
-                                </md-select>
-                            </md-input-container>
+                      
+			<div class="form-group">
+                        <label for="">Estado civil dos pais</label>
+                        <select ng-model="periodo">
+                            <option>Casados</option>
+			    <option>União Estável</option>	
+                            <option>Divorciados</option>
+		 	    <option>Mãe viuva</option>
+			    <option>Pai viuvo</option>		
+				
+                        </select>
+                    </div>
 
                         <div layout="column" layout-gt-xs="row">
 
@@ -427,20 +452,24 @@
 					</div>
 
 
-		<div layout="column" layout-gt-xs="row">
+					<div layout="column" layout-gt-xs="row">
+                                <md-input-container flex="100" flex-gt-xs="15">
+                                    <label>Programas sociais</label>
+                                    <md-select ng-model="vm.formWizard.programassociais">
+                                        <md-option ng-repeat="estado in vm.programassociais" value="{{programassociais}}">
+                                            {{programassociais}}
+                                        </md-option>
+                                    </md-select>
+                                </md-input-container>
+					</div>
 
-				 <md-input-container flex="100" flex-gt-xs="50">
-                                <label>Programas sociais:</label>
-                                <input type="text" name="nat"ng-model="vm.formWizard.programassociais">
-                            </md-input-container>
-				</div>
 
+		
 
                         </div>
                     </form>
                 </md-tab-body>
             </md-tab>
-        </md-tabs>
 
 <!-- PASSO 6 / STEP 6-->
             <md-tab ng-disabled="wizardStep1.$invalid || wizardStep2.$invalid || wizardStep3.$invalid || wizardStep4.$invalid || wizardStep5.$invalid">
@@ -515,7 +544,6 @@
                     </form>
                 </md-tab-body>
             </md-tab>
-        </md-tabs>
 
 	<!-- PASSO 7 / STEP 7-->
             <md-tab ng-disabled="wizardStep1.$invalid || wizardStep2.$invalid || wizardStep3.$invalid || wizardStep4.$invalid || wizardStep5.$invalid || wizardStep6.$invalid">
@@ -564,7 +592,6 @@
                     </form>
                 </md-tab-body>
             </md-tab>
-        </md-tabs>
 
 <!-- PASSO 8 / STEP 8-->
             <md-tab ng-disabled="wizardStep1.$invalid || wizardStep2.$invalid || wizardStep3.$invalid || wizardStep4.$invalid || wizardStep5.$invalid || wizardStep6.$invalid || wizardStep7.$invalid" >
@@ -663,7 +690,6 @@
                     </form>
                 </md-tab-body>
             </md-tab>
-        </md-tabs>
 
 <!-- PASSO 9 / STEP 9-->
             <md-tab ng-disabled="wizardStep1.$invalid || wizardStep2.$invalid || wizardStep3.$invalid || wizardStep4.$invalid || wizardStep5.$invalid || wizardStep6.$invalid || wizardStep7.$invalid || wizardStep8.$invalid">
@@ -678,7 +704,7 @@
                     </span>
                 </md-tab-label>
                 <md-tab-body>
-                    <form name="wizardStep8" ms-form-wizard-form novalidate>
+                    <form name="wizardStep9" ms-form-wizard-form novalidate>
                      <div layout="column" layout-gt-xs="row">
                            <md-input-container flex="100" flex-gt-xs="15">
                                 <label>Televisão</label>
@@ -801,6 +827,123 @@
 	                            </md-input-container>
 				</div>
 
+                        </div>
+                    </form>
+                </md-tab-body>
+            </md-tab>
+
+<!-- PASSO 10 / STEP 10-->
+            <md-tab ng-disabled="wizardStep1.$invalid || wizardStep2.$invalid || wizardStep3.$invalid || wizardStep4.$invalid || wizardStep5.$invalid || wizardStep6.$invalid || wizardStep7.$invalid || wizardStep8.$invalid || wizardStep9.$invalid">
+                <md-tab-label>
+                    <span class="ms-form-wizard-step-label">
+                        <span class="ms-form-wizard-step-number md-accent-bg"
+                              ng-if="wizardStep10.$invalid">10</span>
+                        <span class="ms-form-wizard-step-number md-accent-bg" ng-if="wizardStep10.$valid">
+                            <i class="icon-check s16"></i>
+                        </span>
+                        <span class="ms-form-wizard-step-text">Despesas</span>
+                    </span>
+                </md-tab-label>
+                <md-tab-body>
+                    <form name="wizardStep10" ms-form-wizard-form novalidate>
+                     
+				 <div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                               		 <label>Água</label>
+                               		 <input type="text" name="nat"ng-model="vm.formWizard.agua">
+                            	</md-input-container>
+				</div>
+			
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Energia elétrica</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.energia">
+                            	</md-input-container>
+				</div>
+			
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Telefone</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.telefone">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Aluguel</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.aluguel">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Financiamento da casa</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.financiamentocasa">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Financiamento do carro</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.financiamentocarro">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Transporte</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.transporte">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Alimentação</label>
+                               		 <input type="text" name="nat"ng-model="vm.formWizard.alimentacao">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Gás</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.gas">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Cartão de crédito</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.cartao">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Empréstimo</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.emprestimo">
+                            	</md-input-container>
+				</div>
+				
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                            	   	<label>TV a cabo</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.tvcabo">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Educação</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.educacao">
+                            	</md-input-container>
+				</div>
+
+				<div layout="column" layout-gt-xs="row">
+				 <md-input-container flex="100" flex-gt-xs="50">
+                                	<label>Pensão</label>
+                                	<input type="text" name="nat"ng-model="vm.formWizard.pensao">
+                            	</md-input-container>
+				</div>
                         </div>
                     </form>
                 </md-tab-body>
