Added despesa, situacao_habitacional and aparelhos eletronicos Insert and some loads to future update function

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -521,7 +521,7 @@
                            <div layout="column" layout-gt-xs="row">
                                   <md-input-container flex="100" flex-gt-xs="20">
                                       <label>Situação do imóvel</label>
-                                      <md-select ng-model="vm.aluno.situacao_habitacional.situacao">
+                                      <md-select ng-model="vm.situacao_habitacional.situacao">
                                           <md-option ng-repeat="situacao in vm.situacoes" value="{{situacao}}">
                                               {{situacao}}
                                           </md-option>
