Add dynamic button for parente

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -533,9 +533,9 @@
                       <md-tab-body>
                           <form name="wizardStep6" ms-form-wizard-form novalidate>
 
-                           <div layout="column" layout-gt-xs="row">
+                           <div layout="column" layout-gt-xs="row" ng-repeat="p in vm.parentes track by $index" >
                              <md-input-container flex="100"  flex-gt-xs="70">
-                                 <input type="text" name="nome_parente" ng-model="vm.parente.nome"
+                                 <input type="text" name="nome_parente" ng-model="p.nome"
                                         placeholder="Nome do parente"
                                         >
                                  <div ng-messages="wizardStep6.nome.$error"
@@ -546,43 +546,49 @@
                                  </div>
                              </md-input-container>
       				                   <md-input-container flex="100" flex-gt-xs="15">
-                                      <input type="text" name="parentesco"ng-model="vm.parente.parentesco" placeholder="Parentesco"
+                                      <input type="text" name="parentesco" ng-model="p.parentesco" placeholder="Parentesco"
                                        >
                                   </md-input-container>
-                          </div>
 
                                   <div layout="column" layout-gt-xs="row">
-      				                          <md-input-container flex="100" flex-gt-xs="20">
-                                          <input type="text" name="escolaridade"ng-model="vm.parente.escolaridade" placeholder="Escolaridade"
+      				                    <md-input-container flex="100" flex-gt-xs="20">
+                                          <input type="text" name="escolaridade" ng-model="p.escolaridade" placeholder="Escolaridade"
                                           >
                                         </md-input-container>
 
 
                                         <md-input-container>
-                                          <md-datepicker ng-model="vm.aluno.parente.data_nascimento" md-placeholder="Nascimento" md-open-on-focus></md-datepicker>
+                                          <md-datepicker ng-model="p.data_nascimento" md-placeholder="Nascimento" md-open-on-focus></md-datepicker>
                                         </md-input-container>
 
                                 </div>
 
                                   <div layout="column" layout-gt-xs="row">
                                        <md-input-container flex="100" flex-gt-xs="50">
-                                         <input type="text" name="ocupacao"ng-model="vm.parente.ocupacao" placeholder="Ocupação"
+                                         <input type="text" name="ocupacao" ng-model="p.ocupacao" placeholder="Ocupação"
                                          >
                                      </md-input-container>
 
                                       <md-input-container flex="100" flex-gt-xs="10">
-                                     <input type="text" name="salario"ng-model="vm.parente.salario" ui-money-mask placeholder="Salário"
+                                     <input type="text" name="salario" ng-model="p.salario" ui-money-mask placeholder="Salário"
                                       >
                                     </md-input-container>
       				                    </div>
 
 
                                 <md-input-container flex="100" flex-gt-xs="50">
-                                  <input type="text" name="local_de_trabalho"ng-model="vm.parente.local_de_trabalho" placeholder="Local de trabalho"
+                                  <input type="text" name="local_trabalho" ng-model="p.local_trabalho" placeholder="Local de trabalho"
                                   >
                                 </md-input-container>
 
+                                <md-button class="md-raised md-accent" ng-click="vm.addParente(p)" ng-if="vm.isLastParente(p)">
+                                    Adicionar
+                                </md-button>
 
+                                <md-button class="md-raised md-warn" ng-click="vm.removeParente(p)">
+                                    Remover
+                                </md-button>
+                            </div>
                           </form>
                       </md-tab-body>
                   </md-tab>
@@ -847,7 +853,7 @@
             </md-input-container>
 
             <md-input-container flex="100" flex-gt-xs="20">
-              <input type="text" name="cartao_credito"ng-model="vm.cartao_credito" ui-money-mask placeholder="Cartão de crédito"
+              <input type="text" name="cartao_credito"ng-model="vm.despesa.cartao_credito" ui-money-mask placeholder="Cartão de crédito"
                >
             </md-input-container>
 
@@ -874,7 +880,7 @@
             </md-input-container>
 
             <md-input-container flex="100" flex-gt-xs="20">
-              <input type="text" name="convenio_medico"ng-model="vm.convenio_medico" ui-money-mask placeholder="Convenio médico"
+              <input type="text" name="convenio_medico"ng-model="vm.despesa.convenio_medico" ui-money-mask placeholder="Convenio médico"
                >
             </md-input-container>
           </div>
